--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
-    
+
+    <div class="top-info">
+        <header>
+            <h1>Amy M Haerr</h1>
+        </header>
+
+        <nav class="navbar navbar-light bg-dark">
+            <a class="navbar-brand" href="#">
+                <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+            </a>
+            <ul class="list-inline">
+                <li><a href="index.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+
+
+
+        <h2>Portfolio</h2>
+        <ul class="list-group">
+            
+            <div class="row">
+                <div class="col-sm-6">
+                    <li class="list-group-item"><img src="assets/images/wordguess.jpg" alt="Word Guess"></li>
+                    <h3>Word Guess</h3>
+                </div>
+                <div class="col-sm-6">
+                    <li class="list-group-item"><img src="assets/images/rpg.jpg" alt="RPG Game"></li>
+                    <h3>RPG Game</h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <li class="list-group-item"><img src="assets/images/trivia.jpg" alt="Trivia Game"></li>
+                    <h3>Trivia Game</h3>
+                </div>
+                <div class="col-sm-6">
+                    <li class="list-group-item"><img src="assets/images/riw.jpg" alt="Rutgers"></li>
+                    <h3>Rutgers Info Widget</h3>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <li class="list-group-item"><img src="assets/images/rps.jpg" alt="Rock Paper Scissors"></li>
+                        <h3>Rock Paper Scissors</h3>
+                    </div>
+                </div>
+        </ul>
 </body>
+
 </html>
