--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
 
 
         <h2>Portfolio</h2>
+        <section class="container">
         <ul class="list-group">
             
             <div class="row">
@@ -55,12 +56,14 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-3">
                         <li class="list-group-item"><img src="assets/images/rps.jpg" alt="Rock Paper Scissors"></li>
                         <h3>Rock Paper Scissors</h3>
                     </div>
                 </div>
         </ul>
 </body>
-
+<footer class="footer">
+    <p> Copyright @ 2020</p>
+</footer>
 </html>
