--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,21 @@
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <style>
-            body {
-              background-image: url("assets/images/leaves.png");
-            }
-          </style>
+    <style>
+        body {
+            background-image: url("assets/images/leaves.png");
+        }
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: grey;
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,17 +34,17 @@
 
         <!-- Links -->
         <div class="navbar-nav ml-auto">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">About Me</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="contact.html">Contact</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -45,11 +55,12 @@
         <form>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Name</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Jane Doe">
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Jane Smith">
             </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="janedoe@anywho.com">
+                <input type="email" class="form-control" id="exampleFormControlInput1"
+                    placeholder="janesmith@anywho.com">
                 </select>
             </div>
 
@@ -60,21 +71,13 @@
             <button type="button" class="btn btn-primary">Submit</button>
         </form>
 
-        <style>
-            .footer {
-              position: fixed;
-              left: 0;
-              bottom: 0;
-              width: 100%;
-              background-color: grey;
-              color: white;
-              text-align: center;
-            }
-            </style>
-            
-            <div class="footer">
-              <p>© 2020 Copyright: Amy M Haerr</p>
-            </div>>
+
+
+
+
+        <div class="footer">
+            <p>© 2020 Copyright: Amy M Haerr</p>
+        </div>
 
 
 </body>
