--- a/index.html
+++ b/index.html
@@ -8,26 +8,18 @@
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
     <style>
-        body {
-            background-image: url("assets/images/leaves.png");
-        }
-
-        .footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: grey;
-            color: white;
-            text-align: center;
-        }
+       
     </style>
 </head>
 
 
 <body>
-
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
     <nav class="navbar navbar-expand-sm bg-secondary navbar-danger">
@@ -57,17 +49,15 @@
 
     <main class="container">
         <section class="row">
-            <div class="col-md">
+            <div class="col-sm-3">
 
-                <br>
 
                 <h1 class="block-header">About Me</h1>
-                <hr>
+            
                 <img src="assets/images/amyhaerr.jpg" alt="Amy M Haerr" id="about-image" />
             </div>
-            <div class="col-md">
+            <div class="col-md-9">
 
-                <br>
                 <p> I have been a stay at home mom for the past year and a half. Before that, I taught English as a
                     Second
                     Language in the public school system for fourteen years. I have taught a wide range of grades, from
